Fixed a markdown issue

--- a/main.ipynb
+++ b/main.ipynb
@@ -64,7 +64,7 @@
     "    print(\"===\" * 20)\n",
     "    if(len(title_list)>0):\n",
     "        for i in range(0,len(title_list)):\n",
-    "            stats +=\"\"\"\\n > :memo: {number}. ![{title}](\"{link}\")            \n",
+    "            stats +=\"\"\"\\n > :memo: {number}. ![{title}]({link})            \n",
     "\"\"\".format(title=title_list[i], link=links_list[i],number=i+1)\n",
     "            print(\"[\"+title_list[i]+\"](\"+links_list[i]+\")\")\n",
     "    else:\n",
